find_package(Threads REQUIRED)
find_package(Boost 1.54.0 COMPONENTS system thread REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})

file(GLOB_RECURSE SOURCE_FILES "*.cpp" "../../scene_interface_sma/src/*.cpp" "../../peopleextractor_interface_sma/src/*.cpp")
ADD_EXECUTABLE(imove ${SOURCE_FILES})
SET_TARGET_PROPERTIES(imove PROPERTIES ENABLE_EXPORTS true)
SET_TARGET_PROPERTIES(imove PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -Werror")

TARGET_LINK_LIBRARIES(imove scene_interface_sma)
TARGET_LINK_LIBRARIES(imove peopleextractor_interface_sma)
TARGET_LINK_LIBRARIES(imove ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(imove rt)
TARGET_LINK_LIBRARIES(imove ${Boost_SYSTEM_LIBRARY})
TARGET_LINK_LIBRARIES(imove ${Boost_THREAD_LIBRARY})
